poc for regenerating ref_ids via api

--- a/.github/workflows/backend_plugin_test.yml
+++ b/.github/workflows/backend_plugin_test.yml
@@ -55,4 +55,4 @@ jobs:
 
     - name: Run Backend plugin tests
       run: |
-        ./build/run backend:test -Dspec="../../plugins/${{ github.event.repository.name }}"
+        ./build/run backend:test -Dspec="../../plugins/${{ github.event.repository.name }}/backend"
